Feature : Add send email when create post report

--- a/CommunityReportAppAPI/appsettings.json
+++ b/CommunityReportAppAPI/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=community_report_app;Username=postgres;Password=abc12345"
+  },
+  "MailSettings": {
+    "Host": "smtp.gmail.com",
+    "DefaultCredentials": false,
+    "Port": 465,
+    "Name": "Community Report",
+    "EmailId": "mulyanan@solecode.id",
+    "UserName": "mulyanan@solecode.id",
+    "Password": "ubdp iibd jyas cfrv",
+    "UseSSL": true
   }
 }
